--- a/Guide/ENG.html
+++ b/Guide/ENG.html
@@ -22,16 +22,17 @@
 <li><a href="#stoicos-guide">Stoicos guide</a><ul>
 <li><a href="#introduction">Introduction</a><ul>
 <li><a href="#about">About</a></li>
-<li><a href="#so-you-want-to-write-a-game">So you want to write a game ?</a></li>
 </ul></li>
+<li><a href="#so-you-want-to-write-a-game">So you want to write a game ?</a></li>
 </ul></li>
 </ul>
 </nav>
 <h1 id="stoicos-guide">Stoicos guide</h1>
 <h2 id="introduction">Introduction</h2>
+<p>This section is an introduction about de language’s story and the long path it has taken up to now. If you feel some urge to start making games you can skip directly to the next section “So you want to write a game ?”</p>
 <h3 id="about">About</h3>
 <p>The stoicos is a simple programming language intended to beginners but still strong enough to be used by confirmed developpers. It is a functionnal programming language in a Lisp-like style with some imperative traits.</p>
 <p>The project started in october 2015 and has been slowly growing since and and is at the moment transiting between the version 3 and 4.</p>
-<h3 id="so-you-want-to-write-a-game">So you want to write a game ?</h3>
+<h2 id="so-you-want-to-write-a-game">So you want to write a game ?</h2>
 </body>
 </html>
